hard-gists/5690132/run.log
=== Docker Run Log for 5690132 ===
Started at: Mi 29. Okt 15:53:37 CET 2025

[2025-10-29 15:53:37] START: Running container for 5690132
[2025-10-29 15:53:37] SUCCESS: Container 4221c85a6cf173d9ebca45ef150a0a19df06447d96f40e308b4d33ce664d9791 started for 5690132
=== Container logs for 5690132 ===
  File "/snippet.py", line 49
    print "Invalid card: ", suit, rank
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5690132 ===
[2025-10-29 15:53:39] INFO: Container 4221c85a6cf173d9ebca45ef150a0a19df06447d96f40e308b4d33ce664d9791 has stopped
